--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/buttonMainScreen"
         android:fontFamily="@font/orbitron_medium"
         android:text="@string/encode_button"
         android:textColor="@android:color/background_light"
@@ -36,7 +36,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary"
+        android:background="@color/buttonMainScreen"
         android:fontFamily="@font/orbitron_medium"
         android:text="@string/decode_button"
         android:textColor="@android:color/background_light"
@@ -49,7 +49,7 @@
         app:layout_constraintVertical_bias="0.661" />
 
     <Button
-        android:id="@+id/angry_btn"
+        android:id="@+id/information_button"
 
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -64,6 +64,7 @@
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
+        android:onClick="onInformationButtonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.976"
