Add encode and decode fragments and create tabbed layout for information activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,11 +60,12 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/information_button"
         android:fontFamily="@font/calligraffitti"
+        android:onClick="onInformationButtonClick"
         android:text="i"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        android:onClick="onInformationButtonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.976"
